styles/styles.css
/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
# Generic (CALLED IN ANOTHER FILE)
	- Normalize
	- Box sizing
	- Media width
# Base
	- Typography
	- Elements
	- Links
# Layouts
# Components
	- Header
	- Main
	- Footer
--------------------------------------------------------------*/

/*--------------------------------------------------------------
# Base
--------------------------------------------------------------*/

/* Typography
--------------------------------------------- */
html {
    scroll-behavior: smooth;
}

body {
    background-color: #09121a;
    color: white;
	font-family: "Rubik";
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Andika";
    padding: 1rem;
    margin: 0;
}

p {
    padding: 1rem;
    margin: 0;
}

em {
    font-style: normal;
    color:#bdf8ff;
}

/* Elements
--------------------------------------------- */

address {
    padding: 1rem;
    margin: 0;
}

ul {
	
}

ol {
	
}

dl {
	
}

figure {
	
}

table {
	
}

/* Links
--------------------------------------------- */
a,
a:visited {
    color:#5fdf97;
}

a:hover,
a:focus {
    color:#35da33;
}

a:active {
    color:#b8f5c5;
}


/*--------------------------------------------------------------
# Layout
--------------------------------------------------------------*/



/*--------------------------------------------------------------
# Components
--------------------------------------------------------------*/

/* Header
--------------------------------------------- */


/* Main
--------------------------------------------- */
.banner {
    position: relative;
}

/* .banner img {
    display: block;
    width: 100%;
    opacity: 0.3;
    object-fit: scale-down;
    margin: 0 auto;
} */

.banner video {
    opacity: 0.8;
    object-fit: cover;
    width: 100%;
    height: 100vh;
}

.banner-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    text-align: center;
    width: 80%;

    padding: 1.5rem 0;

    background-color: #000000a8;
    box-shadow: 0 0 1rem #ffffff4e;
}

.banner-text h1 {
    font-size: 3rem;
    margin-top: 0;
}

.banner-text p {
    margin: 0 1rem;
}

.banner svg {
    position: absolute;
    top: 90%;
    left: 50%;
    transform: translate(-50%, -50%);
    
    height: 3rem;
    width: 3rem;
}

.banner a {
    scroll-behavior: smooth;
}

.banner svg path {
    stroke: white !important;
}

.content-wrapper {
    margin: 2rem auto;
}

@media (min-width: 50em) {
    .content-wrapper {
        max-width: 70%;
    }
}

/* Footer
--------------------------------------------- */

footer {
    background-color: #222336;
}

@media (min-width: 50em) {
    footer {
        display: flex;
        justify-content: space-evenly;
    }

    footer p {
        
        vertical-align: center;
    }
}

